--- a/4ЕИТ–Б1/index.html
+++ b/4ЕИТ–Б1/index.html
@@ -7,7 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
         <link rel="stylesheet" href="./styles/style.css">
-        <title>Почетна страница</title>
+        <title>Фото галерија</title>
     </head>
     <body>
         
@@ -16,13 +16,13 @@
         <nav>
             <ul>
                 <a href="index.html"><li class="activate">Почетна</li></a>
-                <a href="./pages/about.html"><li>О Аутору</li></a>
+                <a href="./pages/about.html"><li>О аутору</li></a>
                 <a href="./pages/uputstvo.html"><li>Упутство</li></a>
                 <span>Завршни испит</span>
             </ul>
         </nav>
 
-        <div class="container">
+        <div class="container mb-3">
             <div class="row tekst">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure quibusdam aspernatur nihil molestias impedit vitae aliquam repellendus beatae corporis a rerum, autem pariatur saepe modi sint aut rem quasi corrupti? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Et vel, autem quisquam officiis necessitatibus minus velit sit ipsum deleniti, assumenda laborum eius dicta quaerat dolore blanditiis iusto commodi, pariatur iure? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Animi totam, deserunt nesciunt, quos repellendus eveniet ducimus inventore provident quod non adipisci tempora, officiis nemo excepturi possimus nostrum! Quis, neque ad? Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus iste laudantium quasi fuga pariatur vero deleniti vitae officia aliquid aut accusantium magnam, maiores quia fugit doloremque. Obcaecati incidunt optio ipsam.</p>
             </div>
