--- a/4ЕИТ–Б2/index.html
+++ b/4ЕИТ–Б2/index.html
@@ -7,7 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
         <link rel="stylesheet" href="./styles/style.css">
-        <title>Почетна страница</title>
+        <title>Домаће животиње</title>
     </head>
     <body>
         <div class="container">
@@ -27,7 +27,7 @@
             </div>
             <div class="row mt-4">
                 <div class="col">
-                    <a id="animal1" onclick="window.open('./pages/zivotinje/pas.html', '_blank', 'location=yes,height=470,width=520,scrollbars=yes,status=yes');"><img src="./images/pas.jpg"></a>
+                    <a id="animal1" onclick="window.open('./pages/zivotinje/pass.html', '_blank', 'location=yes,height=470,width=520,scrollbars=yes,status=yes');"><img src="./images/pas.jpg"></a>
                 </div>
                 <div class="col">
                     <a id="animal2" onclick="window.open('./pages/zivotinje/patka.html', '_blank', 'location=yes,height=470,width=520,scrollbars=yes,status=yes');"><img src="./images/patka.jpg"></a>
