--- a/4ЕИТ–Б2/pages/zivotinje/pass.html
+++ b/4ЕИТ–Б2/pages/zivotinje/pass.html
@@ -6,13 +6,13 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-        <title>Pas</title>
+        <title>Домаће животиње</title>
     </head>
     <body>
         <div class="container">
             <div class="row">
                 <div class="col">
-                    <h1 class="text-center">Pas</h1>
+                    <h1 class="text-center mt-2 mb-3 text-uppercase">Пас</h1>
                 </div>
             </div>
             <div class="row">
