--- a/4ЕИТ–Б3/pages/info/Hrvatska.html
+++ b/4ЕИТ–Б3/pages/info/Hrvatska.html
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
-    <title>Hrvatska</title>
+    <link rel="stylesheet" href="../../styles/zemlje.css">
+    <title>Основни подаци</title>
   </head>
   <body>
-    <h1 class="text-center mt-4">Хрватска</h1>
+    <h1 class="text-center mt-4 text-uppercase">Хрватска</h1>
     <div class="text-center mt-2">
-      <p>Главни град: Загреб <br>Број становника: 1,4 милиона <br>Површина: 167</p>
+      <p>Главни град: Загреб <br>Број становника:  3,871 милиона <br>Површина: 56,594 km<sup>2</sup></p>
     </div>
   </body>
 </html>
