--- a/4ЕИТ–Б2/index.html
+++ b/4ЕИТ–Б2/index.html
@@ -27,7 +27,7 @@
             </div>
             <div class="row mt-4">
                 <div class="col">
-                    <a id="animal1" onclick="window.open('./pages/zivotinje/pass.html', '_blank', 'location=yes,height=470,width=520,scrollbars=yes,status=yes');"><img src="./images/pas.jpg"></a>
+                    <a id="animal1" onclick="window.open('./pages/zivotinje/pas.html', '_blank', 'location=yes,height=470,width=520,scrollbars=yes,status=yes');"><img src="./images/pas.jpg"></a>
                 </div>
                 <div class="col">
                     <a id="animal2" onclick="window.open('./pages/zivotinje/patka.html', '_blank', 'location=yes,height=470,width=520,scrollbars=yes,status=yes');"><img src="./images/patka.jpg"></a>
