--- a/4ЕИТ–Б4/pages/about.html
+++ b/4ЕИТ–Б4/pages/about.html
@@ -7,7 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
         <link rel="stylesheet" href="../styles/style.css">
-        <title>О Аутору</title>
+        <title>Пикасо</title>
     </head>
     <body>
         <h1 class="text-center text-uppercase mt-2">О Аутору</h1>
@@ -15,7 +15,7 @@
         <nav>
             <ul class="text-center">
                 <a href="../index.html"><li>Почетна</li></a>
-                <a href="./about.html"><li class="activate">О Аутору</li></a>
+                <a href="./about.html"><li class="activate">О аутору</li></a>
                 <a href="./uputstvo.html"><li>Упутство</li></a>
             </ul>
         </nav>
