--- a/4ЕИТ–Б5/index.html
+++ b/4ЕИТ–Б5/index.html
@@ -7,7 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
         <link rel="stylesheet" href="./styles/style.css">
-        <title>Почетна страница</title>
+        <title>Инструменти</title>
     </head>
     <body>
         <h1 class="text-center text-uppercase mt-2">Основна школа "Соња Маринковић"</h1>
@@ -18,7 +18,7 @@
                 <a href="./pages/uputstvo.html"><li>Упутство</li></a>
             </ul>
         </nav>
-        <h5 class="text-center mt-3 mb-4">Србија и њени суседи</h5>
+        <h5 class="text-center mt-3 mb-4">Звуци инструмената</h5>
         
         <div class="container">
             <div class="row">
@@ -48,6 +48,7 @@
                           <td>
                             <a
                               href="https://sr.wikipedia.org/wiki/%D0%93%D0%B8%D1%82%D0%B0%D1%80%D0%B0"
+                              target="_blank"
                             >
                               <img src="images/gitara.jpg" alt="gitara" class="slika"
                             /></a>
@@ -68,6 +69,7 @@
                           <td>
                             <a
                               href="https://sr.wikipedia.org/wiki/%D0%92%D0%B8%D0%BE%D0%BB%D0%B8%D0%BD%D0%B0"
+                              target="_blank"
                             >
                               <img src="images/violina.jpg" alt="violina" class="slika"
                             /></a>
@@ -88,6 +90,7 @@
                           <td>
                             <a
                               href="https://sr.wikipedia.org/sr-ec/%D0%9A%D0%BB%D0%B0%D0%B2%D0%B8%D1%80"
+                              target="_blank"
                             >
                               <img src="images/klavir.jpg" alt="klavir" class="slika"
                             /></a>
@@ -108,6 +111,7 @@
                           <td>
                             <a
                               href="https://sr.wikipedia.org/wiki/%D0%91%D1%83%D0%B1%D1%9A%D0%B5%D0%B2%D0%B8"
+                              target="_blank"
                             >
                               <img src="images/bubanj.jpg" alt="bubanj" class="slika"
                             /></a>
@@ -128,6 +132,7 @@
                           <td>
                             <a
                               href="https://sr.wikipedia.org/wiki/%D0%A5%D0%B0%D1%80%D0%BC%D0%BE%D0%BD%D0%B8%D0%BA%D0%B0"
+                              target="_blank"
                             >
                               <img src="images/harmonika.jpg" alt="harmonika" class="slika"
                             /></a>
@@ -148,6 +153,7 @@
                           <td>
                             <a
                               href="https://sr.wikipedia.org/wiki/%D0%9A%D0%BE%D0%BD%D1%82%D1%80%D0%B0%D1%84%D0%B0%D0%B3%D0%BE%D1%82"
+                              target="_blank"
                             >
                               <img
                                 src="images/kontrafagot.jpg"
