--- a/4ЕИТ–Б5/pages/info/specijalne.html
+++ b/4ЕИТ–Б5/pages/info/specijalne.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="./design.css">
+    <title>Инструменти</title>
+    <link rel="stylesheet" href="../../styles/design.css">
 </head>
 <body>
     <h1>
-        Specijalne vrste instrumenta
+        Специјалне врсте инструмената
     </h1>
     <p>
         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Blanditiis dicta molestiae illo laboriosam? Consequatur minima quam odit porro excepturi mollitia voluptate ipsam, quod in impedit velit aspernatur veniam. Distinctio, eaque!
