--- a/4ЕИТ–Б10/pages/uputstvo.html
+++ b/4ЕИТ–Б10/pages/uputstvo.html
@@ -7,11 +7,11 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         
         <link rel="stylesheet" href="../styles/style.css">
-        <title>Упутство</title>
+        <title>Rečnik</title>
     </head>
     <body>
         <div class="nav">
-            <h1>Uputstvo</h1>
+            <h1>Elektronski rečnik</h1>
         </div>
         <div class="navigacija">
             <a href="../">Rečnik</a>
