--- a/4ЕИТ–Б11/index.html
+++ b/4ЕИТ–Б11/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <header>
-      <h1>Turisticka agencija "Planinar"</h1>
+      <h1>Turistička agencija "Planinar"</h1>
       <div class="nav">
         <a class="active" href="./">Pocetna</a>
         <a href="./pages/about.html">O autoru</a>
@@ -21,14 +21,14 @@
         Izaberite grad
         <select id="izbor" onchange="funkcija()">
           <option value="beograd">Beograd</option>
-          <option value="cacak">Cacak</option>
+          <option value="cacak">Čačak</option>
           <option value="jagodina">Jagodina</option>
           <option value="kraljevo">Kraljevo</option>
-          <option value="nis">Nis</option>
+          <option value="nis">Niš</option>
           <option value="kladovo">Kladovo</option>
           <option value="kopaonik">Kopaonik</option>
           <option value="bor">Bor</option>
-          <option value="palic">Palic</option>
+          <option value="palic">Palić</option>
           <option value="pirot">Pirot</option>
         </select>
       </div>
@@ -39,7 +39,7 @@
         height="600px"
       ></iframe>
     </section>
-    <div class="futer">©Turisticka agencija "Planinar"</div>
+    <div class="futer">©Turistička agencija "Planinar"</div>
 
     <script src="./js/index.js"></script>
   </body>
