--- a/4ЕИТ–Б11/pages/about.html
+++ b/4ЕИТ–Б11/pages/about.html
@@ -9,11 +9,11 @@
   </head>
   <body>
     <header>
-      <h1>Turisticka agencija "Planinar"</h1>
+      <h1>Turistička agencija "Planinar"</h1>
       <div class="nav">
         <a href="../">Pocetna</a>
         <a class="active" href="./about.html">O autoru</a>
-        <a href="./uputstvo.html"> Uputstvo</a>
+        <a href="./uputstvo.html">Uputstvo</a>
       </div>
     </header>
     <section>
@@ -22,6 +22,6 @@
         Рођен је у Новом Пазару 21. децембра 2004. године. <br>
         Живи у Лешку.</p>
     </section>
-    <div class="futer">©Turisticka agencija "Planinar"</div>
+    <div class="futer">©Turistička agencija "Planinar"</div>
   </body>
 </html>
