--- a/4ЕИТ–Б11/pages/gradovi/palic.html
+++ b/4ЕИТ–Б11/pages/gradovi/palic.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../../styles/str.css">
 </head>
 <body>
-    <h1>Palic</h1>
+    <h1>Palić</h1>
     <p>
         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quas et ea repudiandae cum consequatur dolor corrupti aliquam. Asperiores, quisquam ipsa possimus autem iusto earum? Nisi sunt enim et sint commodi!
     </p>
