--- a/4ЕИТ–Б11/pages/uputstvo.html
+++ b/4ЕИТ–Б11/pages/uputstvo.html
@@ -9,11 +9,11 @@
   </head>
   <body>
     <header>
-      <h1>Turisticka agencija "Planinar"</h1>
+      <h1>Turistička agencija "Planinar"</h1>
       <div class="nav">
         <a href="../">Pocetna</a>
         <a href="./about.html">O autoru</a>
-        <a class="active" href="./uputstvo.html"> Uputstvo</a>
+        <a class="active" href="./uputstvo.html">Uputstvo</a>
       </div>
     </header>
     <section>
@@ -22,6 +22,6 @@
         Na pocetnoj stranici se nalazi vremenska prognoza i combobox sa mogucnosti prikaza prognoze za ponudjene gradove.
       </p>
     </section>
-    <div class="futer">©Turisticka agencija "Planinar"</div>
+    <div class="futer">©Turistička agencija "Planinar"</div>
   </body>
 </html>
