--- a/4ЕИТ–Б22/index.html
+++ b/4ЕИТ–Б22/index.html
@@ -83,7 +83,7 @@
             <button onclick="Oboji()">Oboji neparne</button>
             <button onclick="Prosli()">Polozili</button>
             <button onclick="NeProsli()">Nisu polozili</button>
-            <button onclick="Izdvoji()">Izdvoji one koji su polozili</button>
+            <button onclick="Izdvoji();Izdvoji()">Izdvoji one koji su polozili</button>
         </section>
     </div>
 
