--- a/4ЕИТ–Б1/index.html
+++ b/4ЕИТ–Б1/index.html
@@ -2,10 +2,13 @@
 
 <html lang="en">
     <head>
+        <!-- META TAGOVI -->
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <!-- BOOTSTRAP -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+        <!-- CUSTOM STYLE -->
         <link rel="stylesheet" href="./styles/style.css">
         <title>Фото галерија</title>
     </head>
@@ -13,6 +16,7 @@
         
         <h1>Фото галерија</h1>
 
+        <!-- NAVIGACIONA TRAKA -->
         <nav>
             <ul>
                 <a href="index.html"><li class="activate">Почетна</li></a>
@@ -26,9 +30,11 @@
             <div class="row tekst">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure quibusdam aspernatur nihil molestias impedit vitae aliquam repellendus beatae corporis a rerum, autem pariatur saepe modi sint aut rem quasi corrupti? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Et vel, autem quisquam officiis necessitatibus minus velit sit ipsum deleniti, assumenda laborum eius dicta quaerat dolore blanditiis iusto commodi, pariatur iure? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Animi totam, deserunt nesciunt, quos repellendus eveniet ducimus inventore provident quod non adipisci tempora, officiis nemo excepturi possimus nostrum! Quis, neque ad? Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus iste laudantium quasi fuga pariatur vero deleniti vitae officia aliquid aut accusantium magnam, maiores quia fugit doloremque. Obcaecati incidunt optio ipsam.</p>
             </div>
+            <!-- GLAVNA SLIKA -->
             <div class="row">
                 <img id="slika" class="slika" src="./images/slika1.jpg">
             </div>
+            <!-- MALE SLICICE -->
             <div class="row">
                 <img id="slike1" class="slike" src="./images/slika1.jpg">
                 <img id="slike2" class="slike" src="./images/slika2.jpg">
@@ -43,7 +49,9 @@
             </div>
         </div>
 
+        <!-- CUSTOM JS -->
         <script src="./script/script.js"></script>
+        <!-- BOOTSTRAP JS -->
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js" integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V" crossorigin="anonymous"></script>
     </body>
