--- a/4ЕИТ–Б2/index.html
+++ b/4ЕИТ–Б2/index.html
@@ -2,10 +2,13 @@
 
 <html lang="en">
     <head>
+        <!-- META TAGOVI -->
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <!-- BOOTSTRAP STYLE -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+        <!-- CUSTOM STYLE -->
         <link rel="stylesheet" href="./styles/style.css">
         <title>Домаће животиње</title>
     </head>
@@ -16,6 +19,8 @@
                     <h1 class="text-uppercase mt-2 text-center">Домаће животиње</h1>
                 </div>
             </div>
+
+            <!-- NAVIGACIONA TRAKA -->
             <div class="row">
                 <div class="col">
                     <ul class="text-center">
@@ -25,25 +30,28 @@
                     </ul>
                 </div>
             </div>
+
+            <!-- LINK-SLIKA SA ODGOVARAJUCIM DOGADJAJEM ZA OTVARANJE NOVOG PROZORA -->
             <div class="row mt-4">
                 <div class="col">
-                    <a id="animal1" onclick="window.open('./pages/zivotinje/pas.html', '_blank', 'location=yes,height=470,width=520,scrollbars=yes,status=yes');"><img src="./images/pas.jpg"></a>
+                    <a id="animal1"><img src="./images/pas.jpg"></a>
                 </div>
                 <div class="col">
-                    <a id="animal2" onclick="window.open('./pages/zivotinje/patka.html', '_blank', 'location=yes,height=470,width=520,scrollbars=yes,status=yes');"><img src="./images/patka.jpg"></a>
+                    <a id="animal2"><img src="./images/patka.jpg"></a>
                 </div>
                 <div class="col">
-                    <a id="animal3" onclick="window.open('./pages/zivotinje/macka.html', '_blank', 'location=yes,height=470,width=520,scrollbars=yes,status=yes');"><img src="./images/macka.jpg"></a>
+                    <a id="animal3"><img src="./images/macka.jpg"></a>
                 </div>
                 <div class="col">
-                    <a id="animal4" onclick="window.open('./pages/zivotinje/pile.html', '_blank', 'location=yes,height=470,width=520,scrollbars=yes,status=yes');"><img src="./images/pile.jpg"></a>
+                    <a id="animal4"><img src="./images/pile.jpg"></a>
                 </div>
                 <div class="col">
-                    <a id="animal5" onclick="window.open('./pages/zivotinje/krava.html', '_blank', 'location=yes,height=470,width=520,scrollbars=yes,status=yes');"><img src="./images/krava.jpg" ></a>
+                    <a id="animal5"><img src="./images/krava.jpg" ></a>
                 </div>
             </div>
         </div>
 
+        <!-- FOOTER -->
         <footer>
             <div class="container">
                 <div class="row">
@@ -52,13 +60,16 @@
             </div>
         </footer>
         
+        <!-- AUDIO TAGOVI SA ZVUKOVIMA ZIVOTINJA -->
         <audio id="audio1" src="./sounds/pas.mp3"></audio>
         <audio id="audio2" src="./sounds/patka.mp3"></audio>
         <audio id="audio3" src="./sounds/macka.mp3"></audio>
         <audio id="audio4" src="./sounds/pile.mp3"></audio>
         <audio id="audio5" src="./sounds/krava.mp3"></audio>
 
+        <!-- CUSTOM JS -->
         <script src="./script/script.js"></script>
+        <!-- BOOTSTRAP JS -->
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js" integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V" crossorigin="anonymous"></script>
     </body>
