--- a/4ЕИТ–Б3/index.html
+++ b/4ЕИТ–Б3/index.html
@@ -2,16 +2,20 @@
 
 <html lang="en">
     <head>
+        <!-- META TAGOVI -->
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <!-- BOOTSTRAP STYLE -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+        <!-- CUSTOM STYLE -->
         <link rel="stylesheet" href="./styles/style.css">
         <title>Србија и њени суседи</title>
     </head>
     <body>
         <h1 class="text-center text-uppercase mt-2">Основна школа "Соња Маринковић"</h1>
 
+        <!-- NAVIGACIONA TRAKA -->
         <nav>
             <ul class="text-center">
                 <a href="index.html"><li class="activate">Почетна</li></a>
@@ -24,6 +28,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-2">
+                    <!-- VERTIKALNI NASLOV -->
                     <div class="naziv mt-5">
                       <h2>Г</h2>
                       <h2>е</h2>
@@ -37,8 +42,12 @@
                       <h2>а</h2>
                     </div>
                 </div>
+
                 <div class="col-md-8 position-relative">
+                    <!-- GLAVNA SLIKA -->
                     <img src="./images/srbija.jpg">
+
+                    <!-- SLIKE ZASTAVA -->
                     <div class="drzava-wrapper position-absolute srbija">
                         <img
                         id="img1"
@@ -106,14 +115,16 @@
             </div>
         </div>
 
+        <!-- FOOTER -->
         <footer class="activate">
           <div class="container">
               <div class="row">
                   <p class="text-center">Copyright &copy; Основна школа "Соња Маринковић"</p>
               </div>
           </div>
-      </footer>
+        </footer>
 
+        <!-- AUDIO TAGOVI -->
         <audio id="audio1" src="./sounds/srbija.mp3"></audio>
         <audio id="audio2" src="./sounds/madjarska.mp3"></audio>
         <audio id="audio3" src="./sounds/rumunija.mp3"></audio>
@@ -124,7 +135,9 @@
         <audio id="audio8" src="./sounds/bosna.mp3"></audio>
         <audio id="audio9" src="./sounds/hrvatska.mp3"></audio>
 
+        <!-- CUSTOM JS -->
         <script src="./script/script.js"></script>
+        <!-- BOOTSTRAP JS -->
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js" integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V" crossorigin="anonymous"></script>
     </body>
