--- a/4ЕИТ–Б4/index.html
+++ b/4ЕИТ–Б4/index.html
@@ -1,16 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <!-- META TAGOVI -->
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <!-- BOOTSTRAP STYLE -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+        <!-- CUSTOM STYLE -->
         <link rel="stylesheet" href="./styles/style.css">
         <title>Пикасо</title>
     </head>
     <body>
         <h1 class="text-center text-uppercase mt-2">Основна школа "Соња Маринковић"</h1>
 
+        <!-- NAVIGACIONA TRAKA -->
         <nav>
             <ul class="text-center">
                 <a href="index.html"><li class="activate">Почетна</li></a>
@@ -20,6 +24,7 @@
         </nav>
 
         <div class="ukupno">
+            <!-- NASLOV -->
             <div class="naslov">
                 <p> П </p>
                 <p> и </p>
@@ -30,6 +35,7 @@
             </div>
             <div class="slajder">
             <div>
+                <!-- SLIDER SA SLIKAMA I TEKSTOM -->
                 <div class="mojSlajder animacija" >
                     <img src="images/001.jpg"></img>
                     <div class="tekst">
@@ -96,6 +102,7 @@
                         <p>Aenean tempor vitae metus et tincidunt. Etiam commodo ex leo, varius consequat nibh vestibulum non. Vivamus non magna erat. Curabitur ex mauris, ultrices nec dictum et, congue id augue. Nam rutrum sapien ac leo venenatis, et iaculis nulla vehicula. </p>
                     </div></div>
                 </div>
+                <!-- INDIKATOR TRENUTNE SLIKE -->
                 <div style="text-align:center">
                     <span class="dot"></span> 
                     <span class="dot"></span> 
@@ -108,6 +115,7 @@
             </div>
         </div>	
 
+        <!-- FOOTER -->
         <footer class="activate">
             <div class="container">
                 <div class="row">
@@ -116,6 +124,7 @@
             </div>
         </footer>
 
+        <!-- CUSTOM JS -->
         <script src="./script/script.js"></script>
     </body>
 </html>
