--- a/4ЕИТ–Б5/index.html
+++ b/4ЕИТ–Б5/index.html
@@ -2,15 +2,20 @@
 
 <html lang="en">
     <head>
+        <!-- META TAGOVI -->
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <!-- BOOTSTRAP STYLE -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+        <!-- CUSTOM STYLE -->
         <link rel="stylesheet" href="./styles/style.css">
         <title>Инструменти</title>
     </head>
     <body>
         <h1 class="text-center text-uppercase mt-2">Основна школа "Соња Маринковић"</h1>
+
+        <!-- NAVIGACIONA TRAKA -->
         <nav>
             <ul class="text-center">
                 <a href="index.html"><li class="activate">Почетна</li></a>
@@ -23,6 +28,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-2">
+                    <!-- NASLOV -->
                     <div class="naziv mt-5">
                         <h2>М &nbspк</h2>
                         <h2>у &nbsp у</h2>
@@ -34,6 +40,7 @@
                     </div>
                 </div>
                 <div class="col-md-8">
+                    <!-- TABELA SA ODREDJENIM ELEMENTIMA I PODACIMA -->
                     <table class="table">
                         <thead>
                           <tr>
@@ -171,7 +178,8 @@
                             <p id="p6">Сазнај више</p>
                           </td>
                         </tr>
-            
+                        
+                        <!-- AUDIO TAGOVI -->
                         <audio id="audio1">
                           <source src="sounds/gitara.mp3" type="audio/mpeg" />
                         </audio>
@@ -194,6 +202,8 @@
                 </div>
             </div>
         </div>
+
+        <!-- FOOTER -->
         <footer class="activate mt-4">
             <div class="container">
                 <div class="row">
@@ -201,6 +211,8 @@
                 </div>
             </div>
         </footer>
+
+        <!-- CUSTOM JS -->
         <script src="./script/script.js"></script>
     </body>
 </html>
