--- a/4ЕИТ–Б22/index.html
+++ b/4ЕИТ–Б22/index.html
@@ -2,17 +2,21 @@
 <html lang="en">
 
 <head>
+    <!-- META TAGOVI -->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- BOOTSTRAP STYLE -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <!-- CUSTOM STYLE -->
     <link rel="stylesheet" href="./styles/style.css">
     <title>Efekti tabele</title>
 </head>
 
 <body>
 
+    <!-- HEADER SEKCIJA -->
     <header>
         <div class="c1">
             <p>Zadatak 22</p>
@@ -29,6 +33,8 @@
             </div>
         </div>
         <hr>
+
+        <!-- TABELA SA ODREDJENIM PODACIMA -->
         <div class="row">
             <div class="col">
                 <table class="mt-3" id="Tabela">
@@ -78,6 +84,7 @@
             </div>
         </div>
         <hr>
+        <!-- SEKCIJA SA BUTTON ELEMENTIMA ZA FORMATIRANJE TABELE -->
         <section class="text-center">
             <button onclick="Sort()">Sortiraj</button>
             <button onclick="Oboji()">Oboji neparne</button>
@@ -87,6 +94,7 @@
         </section>
     </div>
 
+    <!-- NAVIGACIONA TRAKA -->
     <footer>
         <div class="container">
             <div class="row">
@@ -103,7 +111,9 @@
         </div>
     </footer>
 
+    <!-- CUSTOM JS -->
     <script src="./js/index.js"></script>
+    <!-- BOOTSTRAP JS -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
         integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous">
     </script>
